--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Game</string>
+    <string name="game_over">游戏结束,重新开始！！</string>
+    <string name="confirm">确定</string>
 </resources>
